# gnudatalanguage

./: .travis-ci.diff  .travis-ci.failing-tests  .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  FMTLexer.hpp  FMTParser.hpp  GDLLexer.hpp  GDLParser.hpp  basic_fun.cpp  cformat.g  dpro.hpp  format.g  gdl.cpp  gdlc.g  gshhg.h  gshhs.h  gstream.hpp  gzstream.hpp  includefirst.hpp  io.cpp  plot3d_nr.cpp
src/antlr/: ASTFactory.hpp  CMakeLists.txt  CharScanner.hpp  LLkParser.cpp  Parser.cpp  Parser.hpp  RefCount.hpp  TreeParser.cpp
src/pro/: appleman.pro  array_indices.pro  cmsv_rvtype.pro  cmsv_test.pro  cmsv_wdata.pro  cmsv_wraw.pro  factorial.pro  helpform.pro  identity.pro  kurtosis.pro  lmgr.pro  mean.pro  meanabsdev.pro  moment.pro  poly.pro  primes.pro  read_bmp.pro  read_dicom.pro  read_jpeg.pro  read_pict.pro  read_png.pro  read_tiff.pro  read_xwd.pro  restore.pro  save.pro  skewness.pro  stddev.pro  template_blank.pro  trace.pro  uniq.pro  variance.pro  write_bmp.pro  write_jpeg.pro  write_pict.pro  write_png.pro
testsuite/: CMakeLists.txt  Makefile.am  launchtest.c  test-GDL.py  tests.xfail  try
